[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/PlayerDetectionArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=7]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 8

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 2 )]

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="ShadowSprite" type="Sprite" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
